--- a/3. Tensors.ipynb
+++ b/3. Tensors.ipynb
@@ -407,24 +407,330 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 2],\n",
+       "        [3, 4],\n",
+       "        [5, 6]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "points_2d"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " 1\n",
+       " 2\n",
+       " 3\n",
+       " 4\n",
+       " 5\n",
+       " 6\n",
+       "[torch.storage._TypedStorage(dtype=torch.int64, device=cpu) of size 6]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "points_2d.storage()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Other than the details regarding storage, tensors need few more details to provide the views to data like size, offset, stride. These are called metadata(obviously). By using these metadata, tensors can provide the view upon the `storage` data structure in various patterns."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 1)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "points_2d.stride()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "points_2d.storage_offset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100, 10, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = torch.tensor([i for i in range(1000)])\n",
+    "x = t.reshape((10,10,10))\n",
+    "print(x.stride())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Point to note is that, some storage objects may not be contiguous. And this may cause problems as some pytorch operations require to have contiguous tensors. To fix that issue we can use `contiguous` function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = torch.tensor([i for i in range(6)]).reshape((2,3))\n",
+    "t.is_contiguous()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t_t = t.t()\n",
+    "t_t.is_contiguous()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0, 3],\n",
+      "        [1, 4],\n",
+      "        [2, 5]]) stride (1, 3) offset 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{t_t} stride {t_t.stride()} offset {t_t.storage_offset()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = t_t.contiguous()\n",
+    "x.is_contiguous()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pytorch allows us to process data directly on GPU (CUDA supported). This can be done during the initial creation of the tensor or we can later copy a tensor made for cpu processing to GPU processing. Doing so returns a tensor that has the same numerical data, but stored in the RAM of the GPU, rather than in regular system RAM."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "point2d_gpu = torch.tensor([[1, 2],\n",
+    "                            [3, 4],\n",
+    "                            [5, 6]], device='cuda')\n",
+    "point2d_gpu = points_2d.to(device='cuda')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 3, 5],\n",
+       "        [2, 4, 6]], device='cuda:0')"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "point2d_gpu.t()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to move back the tensor from GPU to CPU we need to move using `to` function.\n",
+    "\n",
+    "> Another note about tensors is we can convert them to numpy easily by using `numpy` function or from numpy array to tensor by `from_numpy` function.\n",
+    "\n",
+    "\n",
+    "We can save tensors to load in some another point by serializing it to the disk as below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(points_2d, \"tensors/points2d.t\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loaded_points = torch.load(\"tensors/points2d.t\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But the problem is tensors saved in above method is only usable from pytorch. To use tensors with other programs/libraries we can use HDF5 format. To do that using pytorch we need to have `h5py` library in our environment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import h5py\n",
+    "\n",
+    "f = h5py.File('tensors/points2d.hdf5', 'w')\n",
+    "dset = f.create_dataset('coords', data=points_2d.numpy())\n",
+    "f.close()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1, 2],\n",
+      "        [3, 4],\n",
+      "        [5, 6]]) [[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = h5py.File('tensors/points2d.hdf5', 'r')\n",
+    "new_points = f['coords']\n",
+    "last_points = new_points[:]\n",
+    "\n",
+    "print(points_2d, last_points)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But usage seems bit weird tbh."
+   ]
   },
   {
    "cell_type": "code",
