--- a/3 Data to Tensor operations.ipynb
+++ b/3 Data to Tensor operations.ipynb
@@ -131,6 +131,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Text Data\n",
+    "\n",
+    "Text data is generally bit hard to represent in ML tasks due to its nature. We have various methods introduced to represent text data and also special model types to enhance performance of NLP tasks like RNNs, LSTMs and Transformers etc.\n",
+    "\n",
+    "But in general we can use one hot encoding based methods, TF/IDF etc. to represent textual data. And from there we can generate word embeddings to represent the words in numerical formats."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
