simple neural net

--- a/4 Pytorch Autograd.ipynb
+++ b/4 Pytorch Autograd.ipynb
@@ -134,6 +134,7 @@
     "\n",
     "<center><image src=\"./contents/1.jpg\" width=\"500px\"/></center>\n",
     "\n",
+    "(Image extracted from Deep Learning with Pytorch book.)\n",
     "\n",
     "As you can probably remember in DL there are annoyingly large number of notations and these notations cause various confusions (like outputs after activations A, layers l, outputs before activations z etc). So to be aligned with those notations above calculations were done."
    ]
