--- a/7 Convolutions in pytorch.ipynb
+++ b/7 Convolutions in pytorch.ipynb
@@ -289,7 +289,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see image size is reduced by half using the pooling method."
+    "As you can see image size is reduced by half using the pooling method. \n",
+    "\n",
+    "We can combine this technique and convolutions to achieve better results as follows."
    ]
   },
   {
@@ -297,7 +299,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Do not run, Incorrect code\n",
+    "\n",
+    "model = nn.Sequential(\n",
+    "                        nn.Conv2d(3, 16, kernel_size=3, padding=1),\n",
+    "                        nn.Tanh(),\n",
+    "                        nn.MaxPool2d(2),\n",
+    "                        nn.Conv2d(16, 8, kernel_size=3, padding=1),\n",
+    "                        nn.Tanh(),\n",
+    "                        nn.MaxPool2d(2),\n",
+    "                        view(-1, 8 * 8 * 8) # <-- Note this line, here we need to reshape the data.\n",
+    "                        nn.Linear(8 * 8 * 8, 32),\n",
+    "                        nn.Tanh(),\n",
+    "                        nn.Linear(32, 2)\n",
+    "                    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In deep convolutional networks after convolution to classify the output, we need to have linear layers. But then we are required to flatten the outputs (In tensorflow terms) or reshape the view. But unfortunately we cant do that in tensorflow.nn.Sequential type models. Instead we need to create our own class which inherit from nn.Module.\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
